<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:labelFor="@+id/name_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_label_name"/>

    <EditText
        android:id="@+id/name_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:labelFor="@+id/lastname_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_label_lastname"/>

    <EditText
        android:id="@+id/lastname_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:labelFor="@+id/age_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_label_height"/>

        <EditText
            android:id="@+id/age_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:labelFor="@+id/height_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_label_age"/>

        <EditText
            android:id="@+id/height_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <Switch
        android:id="@+id/form_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_switch" />

    <RatingBar
        android:id="@+id/form_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"/>

    <Button
        android:id="@+id/submit_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_button_submit"
        android:layout_gravity="right"
        android:enabled="false"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:id="@+id/reason_layout"
        android:visibility="invisible"
        android:background="@color/colorGray">


        <TextView
            android:id="@+id/lblReason_id"
            android:labelFor="@+id/reason_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_label_reason"/>

        <EditText
            android:id="@+id/reason_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_button_send"
            android:layout_gravity="right"/>

    </LinearLayout>

</LinearLayout>



